[FEAT] CM-17: implement search doctors filters
